# survey-target-detection

./: README.md  pyproject.toml  requirements.txt
config/: default_config.yaml
pipeline/: __init__.py  backproject_3d.py  config.py  detect_targets.py  generate_projections.py  refine_detections.py  run_pipeline.py
preprocessing/: __init__.py  downsample.py  point_cloud_utils.py
scripts/: run_detection.py  run_training.py
training/: __init__.py  evaluate.py  generate_synthetic_data.py  train.py
visualization/: annotate.py  plot_geometry.py
