[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "survey-target-detection"
version = "0.1.0"
description = "Automated survey target detection and sub-millimeter center localization from 3D point clouds"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "Pillow>=10.0",
    "scipy>=1.11",
    "PyYAML>=6.0",
    "ultralytics>=8.0",
    "sahi>=0.11",
    "open3d>=0.17",
    "laspy>=2.5",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]
